Solved commentForm visibility bug.

--- a/public/css/blogs.css
+++ b/public/css/blogs.css
@@ -148,3 +148,7 @@ body {
 	display: flex;
 	justify-content: center;
 }
+
+#commentFormContainer {
+	display: none;
+}
